Fixed horizontal overflow issue

--- a/assets/css/land.css
+++ b/assets/css/land.css
@@ -2,6 +2,7 @@
 # General
 --------------------------------------------------------------*/
 body {
+    overflow-x: hidden;
     font-family: "Open Sans", sans-serif;
     color: #444444;
   }
