--- a/assets/css/pollution.css
+++ b/assets/css/pollution.css
@@ -8,7 +8,9 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+
 body {
+    overflow-x: hidden;
     font-family: "Open Sans", sans-serif;
     color: #444444;
   }
